# musclemap

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.py  mtr.py  pyproject.toml  setup.cfg  t2.py  test_config.py  test_ff.py  test_preproc.py  tox.ini
src/musclemap/: b1.py  config.py  ff.py  mtr.py  mtr_b1.py  musclemap.py  preproc.py  t2.py  vercheck.py
tests/: test_b1.py  test_config.py  test_ff.py  test_mtr.py  test_mtr_b1.py  test_musclemap.py  test_preproc.py  test_t2.py  test_vercheck.py
tests/test_data/ff/philips/thigh_dcm2niix/output/: processing_command.txt
tests/test_data/ff/philips/thigh_volconv/output/: processing_command.txt
tests/test_data/t2/output/: t2_te16ms_xform.mat
